[gd_scene load_steps=3 format=3 uid="uid://c7ow23cauvtl8"]

[ext_resource type="Theme" uid="uid://dudh2k1jjvgdk" path="res://themes/default_theme.tres" id="1_7i3iu"]
[ext_resource type="Script" uid="uid://dj2ddgsj5qt4e" path="res://scripts/ui/settings_menu.gd" id="2_s2d1y"]

[node name="Settings" type="Control"]
layout_mode = 3
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7i3iu")
script = ExtResource("2_s2d1y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainPanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -232.0
offset_bottom = 240.0
grow_horizontal = 0

[node name="LicensesVBoxContainer" type="VBoxContainer" parent="MainPanelContainer"]
layout_mode = 2

[node name="CCButton" type="Button" parent="MainPanelContainer/LicensesVBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../GPLButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../GPLButton")
focus_next = NodePath("../GPLButton")
focus_previous = NodePath("../GPLButton")
text = " "

[node name="Label" type="Label" parent="MainPanelContainer/LicensesVBoxContainer/CCButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "CC-BY-4.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GPLButton" type="Button" parent="MainPanelContainer/LicensesVBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../CCButton")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../CCButton")
focus_next = NodePath("../CCButton")
focus_previous = NodePath("../CCButton")
text = " "

[node name="Label" type="Label" parent="MainPanelContainer/LicensesVBoxContainer/GPLButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GPL-3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SidePanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 88.0
offset_bottom = 24.0

[node name="SideVBoxContainer" type="VBoxContainer" parent="SidePanelContainer"]
layout_mode = 2
alignment = 1

[node name="LicensesButton" type="Button" parent="SidePanelContainer/SideVBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = " "

[node name="LicensesLabel" type="Label" parent="SidePanelContainer/SideVBoxContainer/LicensesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Licenses"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LicensePanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 316.0
offset_bottom = 236.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="LicenseLabel" type="RichTextLabel" parent="ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(312, 232)
layout_mode = 2
focus_mode = 2
bbcode_enabled = true

[connection signal="pressed" from="MainPanelContainer/LicensesVBoxContainer/CCButton" to="." method="_on_cc_button_pressed"]
[connection signal="pressed" from="MainPanelContainer/LicensesVBoxContainer/GPLButton" to="." method="_on_gpl_button_pressed"]
[connection signal="pressed" from="SidePanelContainer/SideVBoxContainer/LicensesButton" to="." method="_on_licenses_button_pressed"]
